Minor css changes, fixed user table overflow

--- a/src/css/UsersTable.css
+++ b/src/css/UsersTable.css
@@ -23,7 +23,6 @@
 .Users-table-table table {
   white-space: nowrap;
   border-collapse: collapse;
-  margin: -1px;
 }
 
 .Users-table-table tr:nth-child(odd) {
@@ -38,6 +37,7 @@
   padding: 0.4em;
   border: 1px solid white;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .Users-table-table td:not(.Users-table-username),
